tests/spec/format/snapshots/comment_leading_before_second_def.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn first() {}
  
  // comment before second
  fn second() {}
---
fn first() {}

// comment before second
fn second() {}
