tests/spec/format/snapshots/comment_on_struct_field.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct Point {
      x: int, // the x coordinate
      y: int, // the y coordinate
  }
---
struct Point {
  x: int, // the x coordinate
  y: int, // the y coordinate
}
