tests/spec/format/snapshots/comment_same_line_trailing_after_expression_and_block_statements.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    foo() // trailing on call
    x = 2 // trailing on assignment
    if ready {
      bar() // inside block
    } // trailing on if
    baz()
  }
---
fn test() {
  foo() // trailing on call
  x = 2 // trailing on assignment
  if ready {
    bar() // inside block
  } // trailing on if
  baz()
}
