tests/spec/format/snapshots/comment_same_line_trailing_before_call_spread_arg.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f(args: Slice<int>) {
    foo(1, // trailing
    args...)
  }
---
fn f(args: Slice<int>) {
  foo(
    1, // trailing
    args...,
  )
}
