tests/spec/format/snapshots/comment_same_line_trailing_before_enum_variant_pattern_rest.snap
---
source: tests/spec/format/mod.rs
description: |-
  enum E { Triple(int, int, int), Other }
  
  fn f(e: E) -> int {
    match e {
      Triple(1, // trailing
      ..) => 0,
      _ => 1,
    }
  }
---
enum E {
  Triple(int, int, int),
  Other,
}

fn f(e: E) -> int {
  match e {
    Triple(
      1, // trailing
      ..,
    ) => 0,
    _ => 1,
  }
}
