tests/spec/format/snapshots/comment_same_line_trailing_before_inlinable_last_arg.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f() {
    foo(a, b, // trailing
    |x| { x + 1 })
  }
---
fn f() {
  foo(
    a,
    b, // trailing
    |x| {
      x + 1
    },
  )
}
