tests/spec/format/snapshots/comment_same_line_trailing_before_slice_rest_bind.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    match items {
      [first, // trailing
      ..rest] => first,
      [] => 0,
    }
  }
---
fn test() {
  match items {
    [
      first, // trailing
      ..rest,
    ] => first,
    [] => 0,
  }
}
