tests/spec/format/snapshots/comment_same_line_trailing_before_slice_rest_discard.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    match items {
      [first, // trailing
      ..] => first,
      [] => 0,
    }
  }
---
fn test() {
  match items {
    [
      first, // trailing
      ..,
    ] => first,
    [] => 0,
  }
}
