tests/spec/format/snapshots/comment_same_line_trailing_before_struct_pattern_rest.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct Point { x: int, y: int, z: int }
  
  fn f(p: Point) -> int {
    match p {
      Point { x: 1, // trailing
      .. } => 0,
      _ => 1,
    }
  }
---
struct Point { x: int, y: int, z: int }

fn f(p: Point) -> int {
  match p {
    Point {
      x: 1, // trailing
      ..,
    } => 0,
    _ => 1,
  }
}
