tests/spec/format/snapshots/comment_same_line_trailing_before_struct_spread.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct Point { x: int, y: int }
  
  fn f(other: Point) -> Point {
    Point { x: 1, // trailing
    ..other }
  }
---
struct Point { x: int, y: int }

fn f(other: Point) -> Point {
  Point {
    x: 1, // trailing
    ..other,
  }
}
