tests/spec/format/snapshots/comment_same_line_trailing_between_call_args.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f() {
    foo(a, // trailing
    b, c)
  }
---
fn f() {
  foo(
    a, // trailing
    b,
    c,
  )
}
