tests/spec/format/snapshots/comment_same_line_trailing_between_fn_params.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test(
    a: int, // trailing on a
    b: int,
  ) -> int {
    a + b
  }
---
fn test(
  a: int, // trailing on a
  b: int,
) -> int {
  a + b
}
